modify MyHid class

--- a/Sample/Sample/Sample.vcxproj.filters
+++ b/Sample/Sample/Sample.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\MyHid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\hid.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\MyHelp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\MyWin32Help.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\MyHid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hidapi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
