--- a/Sample/Sample/Sample.vcxproj
+++ b/Sample/Sample/Sample.vcxproj
@@ -102,6 +102,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>setupapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,11 +140,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\hid.c" />
     <ClCompile Include="..\..\MyHelp.cpp" />
+    <ClCompile Include="..\..\MyHid.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\hidapi.h" />
     <ClInclude Include="..\..\MyHelp.h" />
+    <ClInclude Include="..\..\MyHid.h" />
     <ClInclude Include="..\..\MyWin32Help.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
