add mylog class

--- a/Sample/Sample/Sample.vcxproj
+++ b/Sample/Sample/Sample.vcxproj
@@ -143,12 +143,14 @@
     <ClCompile Include="..\..\hid.c" />
     <ClCompile Include="..\..\MyHelp.cpp" />
     <ClCompile Include="..\..\MyHid.cpp" />
+    <ClCompile Include="..\..\MyLog.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\hidapi.h" />
     <ClInclude Include="..\..\MyHelp.h" />
     <ClInclude Include="..\..\MyHid.h" />
+    <ClInclude Include="..\..\MyLog.h" />
     <ClInclude Include="..\..\MyWin32Help.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
